# truenas

./: .gitignore  CLAUDE.md  Makefile  platform.yml
.github/workflows/: ci.yml  deploy.yml
backend/src/: lib.rs  main.rs
docker/sonarqube/: .env.example  docker-compose.yml
infrastructure/terraform/: .terraform.lock.hcl  datasets.tf  locals.tf  main.tf  outputs.tf  providers.tf  sonarqube-bootstrap.tf  sonarqube-ci-token.tf  sonarqube.tf  ssm.tf  variables.tf
scripts/: deploy-sonarqube.sh  deploy-terraform.sh
sonarqube/: Dockerfile  compose.yaml
sonarqube/bootstrap/: Cargo.toml
sonarqube/bootstrap/src/: main.rs
