[package]
name = "sonarqube-bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sonarqube-bootstrap"
path = "src/main.rs"

[dependencies]
aws-config = "1"
aws-sdk-ssm = "1"
lambda_runtime = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
